Add About Me, Skills andn Learning Goal

--- a/index.html
+++ b/index.html
@@ -3,6 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reima │　Profile</title>
+    <title>Reima│Profile</title>
 </head>
 </html>
+<body>
+    <header class="header">
+    <h1>Reima Saito</h1>
+    <p>Backend Engineer Aspirant</p>
+    </header>
+
+    <main class="container">
+        <section>
+            <h2>About Me</h2>
+            <p>高校卒業後、未経験からバックエンドエンジニアを目指して学び続けています。
+               現在はHTML/CSSやGitを中心に基礎を固めています。
+            </p>
+        </section>
+
+        <section class="skills">
+            <h2>Skills</h2>
+            <ul>
+                <li>HTML/CSS(Basic)</li>
+               <li>Git / GitHub（個人開発・学習ログ管理）</li>
+            </ul>
+        </section>
+
+        <section class="Learning Goal">
+            <h2>Learning Goal</h2>
+            <p>将来的にはGoを用いたバックエンド開発に携わり、 実務で通用するエンジニアになることを目標としています。
+    </main>
+</body>
