--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reima│Profile</title>
 </head>
-</html>
 <body>
     <header class="header">
     <h1>Reima Saito</h1>
@@ -28,9 +27,10 @@
             </ul>
         </section>
 
-        <section class="Learning Goal">
+        <section class="LearningGoal">
             <h2>Learning Goal</h2>
-            <p>将来的にはGoを用いたバックエンド開発に携わり、 実務で通用するエンジニアになることを目標としています。
+            <p>将来的にはGoを用いたバックエンド開発に携わり、 実務で通用するエンジニアになることを目標としています。</p>
+        </section>
     </main>
 </body>
 </html>
