refactor: clean up HTML structure

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reima│Profile</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header">
     <h1>Reima Saito</h1>
     <p>Backend Engineer Aspirant</p>
-    </header>
+</header>
 
     <main class="container">
         <section>
@@ -27,7 +28,7 @@
             </ul>
         </section>
 
-        <section class="LearningGoal">
+        <section class="learning-goal">
             <h2>Learning Goal</h2>
             <p>将来的にはGoを用いたバックエンド開発に携わり、 実務で通用するエンジニアになることを目標としています。</p>
         </section>
