add: implement dark mode toggle with JavaScript

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header class="header">
     <h1>Reima Saito</h1>
     <p>Backend Engineer Aspirant</p>
+    <button id="theme-toggle">Dark Mode</button>
 </header>
 
     <main class="container">
@@ -33,5 +34,6 @@
             <p>将来的にはGoを用いたバックエンド開発に携わり、 実務で通用するエンジニアになることを目標としています。</p>
         </section>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
